test/cases/compile_errors/repeated_invalid_field_access_to_generic_function_returning_type_crashes_compiler_2655.zig
pub fn A() type {
    return Q;
}
test "1" {
    _ = A().a;
    _ = A().a;
}

// error
// backend=stage2
// target=native
// is_test=1
//
// :2:12: error: use of undeclared identifier 'Q'
